SubVersion: $Id$

- 23/05/2005, version 2.00-rc2:
	- [jb] 1399: Added EPS/PDF screenshot output
	- [kevin] $1357/1362: added support for disassembling ER_throw
	- [kevin] $1364/1365: link tiemu.rc in for MinGW
	- [roms]  $1382: fixed HOME & CATALOG keys on Titanium (mouse only)
	- [jb]    $1399: added EPS/PDF screenshot output
	- [roms]  $1408: fixed check of Titanium skins (bug #1209813)
	- [roms]  $1413: fixed debugger display under SawFish (patch #1209183)

- 16/05/2005, version 2.00-rc1:
	- [kevin] $1337/1338: fix --with-kde for Debian and derivatives
	- [kevin] $1340/1341: add -Wl,--export-dynamic for all Linux targets to fix Ubuntu problem
	- [kevin] $1346: fixed DESTDIR support (useful for RPM packaging)
	- [kevin] $1351/1352: implement undocumented flags for ABCD, SBCD, NBCD and CHK
	                      (source: 68knotes.txt by Bart Trzynadlowski)
	- [roms] $1358: first release candidate

- 06/05/2005, version 1.80v:
	- [roms]  $1248: changed rom_base from 0x20 to 0x200000 whenever applicable
	- [roms]  $1249-1253: memory layout management rewritten
	- [roms]  $1254: splitted I/O ports on HW3
	- [roms]  $1255: finished to use new memory layout; the memory window shows 
					 the exact memory mapping
	- [roms]  $1263: hw_get_real_address is a function pointer which depends on the 
					 calculator type for now (part of memory management rewrite attempt)
	- [roms]  $1278: completely removed old memory banking system (mem_tab & mem_msk)
	- [roms]  $1293: fixed engine loop (every 30ms)
	- [roms]  $1294: can change LCD rate from popup menu


- 27/04/2005, version 1.80u:
	- [roms]  $1191: popup menu can be raised by clicking on the LCD (iPAQ)
	- [roms]  $1192: fixed logging domain support (printl)
	- [roms]  $1195: some bug fixes by Christian Walther.
	- [roms]  $1213: fixed contrast on Titanium
	- [roms]  $1214: fixed range breakpoints (completely broken) and code bkpt
	- [roms]  $1229: can exit emulator from cross (WM decorations)